--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body class="bg-[#444345]">
+	<body class="bg-stone-900">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
